--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ Flask-JWT==0.3.2
 Flask-JWT-Extended==3.18.1
 Flask-Login==0.4.1
 Flask-WTF==0.14.2
+herman==1.2.5
 idna==2.8
 isort==4.3.16
 itsdangerous==1.1.0
