--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,17 @@
-amqp==2.4.2
-asn1crypto==0.24.0
 astroid==2.2.5
-Authlib==0.10
 autopep8==1.4.3
-billiard==3.6.0.0
-boto3==1.9.126
-botocore==1.12.126
-braintree==3.52.0
-celery==4.3.0
-
-cffi==1.12.2
-chardet==3.0.4
+certifi==2019.3.9
 Click==7.0
 colorama==0.4.1
-cryptography==2.6.1
 cssmin==0.2.0
-docutils==0.14
-entrypoints==0.3
-flake8==3.7.7
 Flask==1.0.2
 Flask-Assets==0.12
 Flask-Cors==3.0.7
-Flask-JWT==0.3.2
 Flask-JWT-Extended==3.18.1
-Flask-Login==0.4.1
-Flask-WTF==0.14.2
-herman==1.2.5
-idna==2.8
-isort==4.3.16
+gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
-jmespath==0.9.4
+Jinja2==2.10
 jsmin==2.2.2
-kombu==4.5.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
@@ -40,25 +19,12 @@ peewee==3.8.2
 peewee-db-evolve==3.7.0
 psycopg2-binary==2.7.7
 pycodestyle==2.5.0
-pycparser==2.19
-pyflakes==2.1.1
 PyJWT==1.7.1
 pylint==2.3.1
-python-dateutil==2.8.0
 python-dotenv==0.10.1
-python-http-client==3.1.0
-pytz==2019.1
-requests==2.21.0
-s3transfer==0.2.0
-sendgrid==6.0.2
 six==1.12.0
-style==1.1.0
 typed-ast==1.3.1
-urllib3==1.24.1
-vine==1.3.0
-virtualenv==16.5.0
 webassets==0.12.1
 Werkzeug==0.14.1
 wincertstore==0.2
 wrapt==1.11.1
-WTForms==2.2.1
